src/testData/commands/errors/parent/test_ownerOnly.ts
import { defineCommand } from "../../../../definitions.js";

export default defineCommand({
    key: "test_ownerOnly",
    ownerOnly: false,
    handler: () => { }
});
